--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
 body {
-  margin: 0;
+  color: #000;
+  font-family:Monospace;
+  font-size:13px;
+  text-align:center;
+  font-weight: bold;
+  background-color: #fff;
+  margin: 0px;
+  overflow: hidden;
 }
 
 canvas {
