--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
-body {
-  color: #000;
+body {  
   font-family:Monospace;
   font-size: 15px;
   text-align: center;
@@ -7,3 +6,7 @@ body {
   overflow: hidden;
 }
 
+canvas {
+  width: 100%;
+  height: 100%;
+}
