--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
-body {  
-  font-family:Monospace;
-  font-size: 15px;
+.top {  
+  font-family: Monospace;
+  font-size: 25px;
   text-align: center;
   background-color: #fff;
   overflow: hidden;
+  font-weight: bold;
+
 }
 
 canvas {
